[tool.poetry]
name = "questions"
version = "0.1.0"
description = ""
authors = ["Andrew Chong <opheron@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
